# tircpp

./: CMakeLists.txt  README.md
include/: Logger.h  Socket.h  TIRCSocket.h
src/: Logger.cpp  Socket.cpp  TIRCSocket.cpp
tests/: tirc++_test.cpp
